[metadata]
name = demesdraw
author = Graham Gower
license = ISC
description = drawing tools for Demes demographic models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = demesdraw
include_package_data = True
python_requires = >= 3.6
install_requires =
    demes
    numpy
    scipy
    matplotlib >= 3.3.1
setup_requires =
    setuptools
    setuptools_scm

[flake8]
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503

[mypy]
files = demesdraw

[tool.black]
target_version = py36

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True
