[metadata]
name = demesdraw
author = Graham Gower
license = ISC
description = drawing tools for Demes demographic models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grahamgower/demesdraw
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Documentation = https://grahamgower.github.io/demesdraw/
    Source Code = https://github.com/grahamgower/demesdraw
    Bug Tracker = https://github.com/grahamgower/demesdraw/issues

[options]
packages = demesdraw
include_package_data = True
python_requires = >= 3.7
install_requires =
    demes >= 0.2.0
    matplotlib >= 3.3.1
    numpy >= 1.20.0
    scipy
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    demesdraw = demesdraw.__main__:cli

[flake8]
extend-exclude = docs/_build,venv
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    tests/test_import_visibility.py:F403,F405

[mypy]
files = demesdraw, tests

[tool.black]
target_version = py39

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-mpmath.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[tool:pytest]
addopts = -n auto
testpaths = tests
